<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".fragment_third">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-38dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/green"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/rounded_button_green"
        android:rotation="-45"
        android:text="@string/green"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yellow"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/rounded_button_yellow"
        android:rotation="-45"
        android:text="@string/yellow"
        android:textColor="#D8C200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/red"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="420dp"
        android:background="@drawable/rounded_button_red"
        android:rotation="45"
        android:text="@string/red"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/blue"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/rounded_button_blue"
        android:rotation="45"
        android:text="@string/blue"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/startSimon"
        android:layout_width="212dp"
        android:layout_height="93dp"
        android:background="@drawable/rounded_button_start"
        android:text="@string/start"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/round"
        android:layout_width="135dp"
        android:layout_height="146dp"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="96sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>